# ams-monorepo-sonar

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .ruff.toml  Biblia IA API.txt  CLAUDE.md  Claude_Mythos_Changes_Everything_Your_AI_Stack_Isn't_Ready.txt  Dockerfile  MOBILE_HANDOFF.md  MULTI_PLANT_CHANGES.txt  Makefile  PROJECT_STATUS.md  README.md  SESSION_HANDOFF.md  Transcript_Agent_harness_Design.txt  check_kpi.py  conftest.py  docker-compose.split.yml  docker-compose.yml  extract_schema.py  find_bad_json.py  fix_all_json.py  fix_btn3.py  fix_buttons.py  fix_dates.py  fix_empty_json.py  fix_goldfields_data.py  fix_goldfields_enrich.py  fix_hse_ci2.py  fix_kpis.py  fix_kpis2.py  fix_problem_desc.py  gzip.conf  import_goldfields.py  migrate_to_app_tables.py  migrate_v2.py  migrate_v3.py  (+8 more)
apps/core/: pyproject.toml
apps/core/api/: config.py  main.py  schemas.py
apps/core/api/ai_core/agents/: contracts.py  engineering.py  hr_talent.py  hse.py  it_ot.py  project_orchestrator.py  reliability.py  spare_parts.py
apps/core/api/ai_core/orchestration/: checkpoint.py  workflow.py
apps/core/api/ai_core/prompts/: construction_prompt.md  engineering_prompt.md  finance_prompt.md  project_orchestrator_prompt.md
apps/core/api/ai_core/tool_wrappers/: backlog_tools.py  equipment_tools.py  execution_task_tools.py  fm_lookup_tools.py  health_tools.py  (+11 more)
apps/core/api/data/: equipment_records_sap.json  failure_catalog_sap.json
apps/core/api/database/: connection.py  models.py
apps/core/api/routers/: agentic.py  analytics_dashboards.py  auth.py  capture_geo.py  deliverables.py  execution_checklists.py  feedback.py  financial.py  managed_work_orders.py  media.py  notification_deliveries.py  plan_12_weeks.py  process_gaps.py  programmer_agent.py  reliability.py  reporting.py  reports_export.py  sap.py  sap_pm.py  scheduling.py  security.py  sprint6_scaffolds.py  supervisor_agent.py  sync.py  work_requests.py  workflow.py
apps/core/api/services/: agentic_audio_fault_service.py  agentic_digital_twin_service.py  agentic_edge_sync_service.py  agentic_loto_vision_service.py  agentic_nameplate_ocr_service.py  agentic_rcm_advisor_service.py  agentic_safety_checklist_service.py  agentic_sap_sync_service.py  agentic_spare_parts_forecast_service.py  ai_provider_service.py  assignment_service.py  backlog_service.py  cost_analysis_service.py  equipment_chat_service.py  managed_wo_service.py  notification_delivery_service.py  scheduling_service.py  stock_forecast_service.py  vision_service.py  work_package_service.py  ws_client_context.py  ws_manager.py
apps/sap_mock/: pyproject.toml
apps/sap_mock/data/: avisos_work_requests.json  functional_locations.json
apps/sap_mock/server/: __init__.py  main.py
(+1221 files in other folders)
