[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ams-core"
version = "2.0.0"
description = "AMS — FastAPI backend (api/). Servicio principal."
requires-python = ">=3.11"
dependencies = [
    # Web framework + server
    "fastapi==0.133.1",
    "uvicorn[standard]==0.41.0",
    "gunicorn==25.1.0",
    "python-multipart==0.0.26",

    # DB + ORM
    "sqlalchemy==2.0.47",

    # Validation + config
    "pydantic==2.12.5",
    "python-dotenv==1.2.2",
    "python-dateutil==2.9.0.post0",

    # HTTP client (SAP transports, externos)
    "httpx==0.28.1",

    # Auth
    "PyJWT[crypto]==2.12.0",
    "bcrypt==4.2.1",
    "pyotp==2.9.0",
    "qrcode==7.4.2",

    # AI (Anthropic SDK)
    "anthropic==0.83.0",

    # Document generation (Word, PowerPoint, Excel)
    "python-docx==1.1.2",
    "python-pptx==1.0.2",
    "openpyxl==3.1.5",
    "xlrd==2.0.1",

    # Observability
    "sentry-sdk[fastapi]==2.19.0",

    # Internal workspace packages (instalados via editable)
    "ams-tools",
    "ams-agents",
    "ams-skills",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]
